--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,6 @@ server:
   port: 8443
   ssl:
     enabled: true
-    key-store: classpath:keystore.p12
-    key-store-password: password
+    key-store: classpath:localhost.p12
+    key-store-password: changeit
     key-store-type: PKCS12
